# real-time-diag-mc

./: .clang-format  CMakeLists.txt
benchmark/: compare_to_profumo.ipynb  ctint_keldysh_testing.ipynb  plot_g0_semi_circ.ipynb  qmc_keldysh.py  run_current.py  run_density.py  semicirc_Q_alpha05_ed05_V0_Nmax5.h5  series.py
benchmark/g0/: CheckGF.ipynb
c++/: .keldysh_sum.hpp.swp  CMakeLists.txt  \  accumulator.hpp  binning.cpp  binning.hpp  configuration.cpp  configuration.hpp  configuration_auxmc.cpp  configuration_qmc.cpp  ctint.cpp  ctint.hpp  det_manip.hpp  g0_flat_band.hpp  g0_latt.hpp  g0_lattice_1d.hpp  g0_semi_circ.hpp  g0s.hpp  importance_sampling.cpp  integrand.hpp  keldysh_sum.cpp  keldysh_sum.hpp  measure.cpp  measure.hpp  measures.hpp  model.cpp  model.hpp  model_adaptor.hpp  moves.cpp  moves.hpp  moves_measures.cpp  moves_measures.hpp  parameters.hpp  poly_interp.cpp  poly_interp.hpp  qmc_data.hpp  random_vertex_gen.cpp  random_vertex_gen.hpp  sobol.cpp  sobol.hpp  (+5 more)
c++/unused_files/: g0_latt.hpp
cmake/modules/: FindGSL.cmake
demo/: CMakeLists.txt  demo.cpp
notebook/: Werner.ipynb
notebook/resummation_nn/: resummation_nn.ipynb  series_xavier.py
notebook/resummation_nn/results_comparison_ctint_cthyb/: README_cthyb  results_cthyb_comparison_ctint.h5
notebook/resummation_nn/results_nmax14/: README  nn.txt  results_nmax14.h5
old_notebook/: lattice_gf.ipynb  semicirc_Q_alpha05_ed05_V0.ipynb
python/: CMakeLists.txt  __init__.py  construct_gf.py  converters.hxx  ctint_keldysh_converters.hxx  ctint_keldysh_desc.py  ctint_keldysh_parameters.rst  ctint_new_desc.py  debugging_utilities.py  fourier_transform.py  g0_flat_band_desc.py  g0_lattice_1d_desc.py  g0_semi_circ_desc.py  gen_harmonic.py  intermediate_saving.py  model.py  parameters.rst  perturbation_series.py  post_treatment.py  qmc_keldysh_multiplejob.py  quasi_generators.py  quasi_harmonic_gen.py  quasimc.py  quasimc_post_treatment.py  quasimc_results.py  quasimc_utility.py  results.py  sobol_desc.py  solver.py  toolbox.py  utility.py  version.py.in
python/generators/: CMakeLists.txt  __init__.py  harmonic.py  lattice.py  pseudo.py  sobol.py
python/generators/lattice_data/lat-n134217728-s24-m27-p2-alpha1-a1_0-a2_1-a3_0-c_None-d1_1-d2_2/: E.txt  e2s.txt  log.txt  x.txt  z.txt
python/generators/lattice_data/lat-n16777216-s20-m24-p2-alpha1-a1_0-a2_1-a3_0-c_None-d1_1-d2_2/: E.txt  config.txt  e2s.txt  log.txt  x.txt  z.txt
python/generators/lattice_data/lat-n65536-s20-m16-p2-alpha1-a1_0-a2_1-a3_0-c_None-d1_1-d2_2/: E.txt  config.txt  e2s.txt  log.txt  x.txt  z.txt
sobol/: .gitignore  CMakeLists.txt  readme.txt  setup.py  sobol.cpp  sobol.pyx
sobol/c++/: CMakeLists.txt  main.cpp  sobol_c.cpp  sobol_c.hpp
test/: CMakeLists.txt
test/c++/: CMakeLists.txt  cofactor_row_1.cpp  cofactor_row_2.cpp  configuration_1.cpp  configuration_2.cpp  configuration_3.cpp  demo.cpp  g0_checks.cpp  g0_keldysh_alpha.cpp  gray_test.cpp  kernel_binning_1.cpp  kernel_binning_2.cpp  kernel_binning_3.cpp  moves.cpp  profile.cpp  quasimc.cpp  run_tests.cpp  sobol.cpp  utility.hpp
test/python/: CMakeLists.txt  CheckGF.ipynb  I0.py  analytic_order1.py  collecting.py  compare_with_oldway.py  correlator.py  correlator_multitime.py  correlator_multitime_order_0.py  correlator_order_0.py  density.py  density_multitime.py  density_multitime_order_0.py  density_order_0.py  double_occ.py  g0_lattice_1d.py  hubbard_1d.py  impurity.py  impurity_oldway.py  lattice_test.py  order1_params1.py  order1_params1_grea.py  order1_params1_grea_oldway.py  order1_params1_less.py  order1_params1_less1.py  order1_params1_less2.py  order1_params1_less3.py  order1_params1_less4.py  order1_params1_less5.py  order1_params1_less_oldway.py  order1_params1_single.py  order1_params1_staircase.py  order1_params2.py  order1_params2_less.py  order1_params2_less2.py  order2_params1.py  phsym_kernels.py  process_quasimc.py  quasimc.py  quasimc_coor_transforms.py  (+24 more)
test/python/old_tests/: correlator.out.h5  correlator.py  correlator.ref.h5  correlator_order_0.py  current.py  current.ref.h5  density.out.h5  density.py  density.ref.h5  density10k.out.h5  density10k.py  density10k.ref.h5  density20k.out.h5  density20k.py  density20k.ref.h5  density40k.out.h5  density40k.py  density40k.ref.h5  density_order_0.py  double_occ.ref.h5
test/python/out_files/: .keep  order1_params1_grea.out.h5  order1_params1_grea_oldway.out.h5  order1_params1_less.out.h5  order1_params1_less1.out.h5  order1_params1_less2.out.h5  order1_params1_less_oldway.out.h5  order1_params2.out.h5  order1_params2_less.out.h5  order1_params2_less2.out.h5
test/python/ref_data/: analytic_order1.py  analytic_order1_bis.py  analytic_order2.py  analytic_order4.py  order1_params1.ref.h5  order1_params1_10k.ref.h5  order1_params1_1k.ref.h5  order1_params1_bis.ref.h5  order1_params1_bis_1k.ref.h5  order1_params2.ref.h5  order1_params2_full.ref.h5  order2_params1.ref.h5  order2_params3.ref.h5  order4_params3.ref.h5
